@@ -1,3 +1,7 @@
+2000-12-01  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Intrinsic 0x8f also seems to be start_speech().
+
 2000-12-01  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* exult.cc: Ctrl-P: repaint screen, P: use lockpick
 	* configure.in: added -Wno-long-long as default option
